# mathematics-for-machine-learning-and-data-science-specialization

./: .gitignore  README.md  pyproject.toml
c1-linear-algebra/w1/: C1_W1_Lab_1_introduction_to_numpy_arrays.ipynb  C1_W1_Lab_2_linear_systems_as_matrices.ipynb
c1-linear-algebra/w2/: C1W2_Assignment.ipynb  utils.py
c1-linear-algebra/w3/: C1W3_Assignment.ipynb  C1W3_UGL_1_vector_operations.ipynb  C1W3_UGL_2_matrix_multiplication.ipynb  C1W3_UGL_3_linear_transformations.ipynb
c1-linear-algebra/w4/assignment/: C1W4_Assignment.ipynb
c1-linear-algebra/w4/lab/: C1_W4_Lab_1_Interpreting_eigenvalues_and_eigenvectors.ipynb
c1-machine-learning-linear-algebra/w1/: C1_W1_Lab_2_linear_systems_as_matrices.ipynb
c1-machine-learning-linear-algebra/w2/: C1W2_Assignment.ipynb
c1-machine-learning-linear-algebra/w3/: C1W3_Assignment.ipynb  C1W3_UGL_2_matrix_multiplication.ipynb
c1-machine-learning-linear-algebra/w4/lab/: utils.py
c2-calculus/w1/: C2_W1_Assignment.ipynb  C2_W1_Lab_1_differentiation_in_python.ipynb
c2-calculus/w2/: C2_W2_Assignment.ipynb  C2_W2_Lab_1_Optimization_Using_Gradient_Descent_in_One_Variable.ipynb  C2_W2_Lab_2_Optimization_Using_Gradient_Descent_in_Two_Variables.ipynb
c2-calculus/w3/: C2_W3_Assignment.ipynb  C2_W3_Lab_1_Regression_with_Perceptron.ipynb  C2_W3_Lab_2_Classification_with_Perceptron.ipynb  C2_W3_Lab_3_Optimization_Using_Newtons_Method.ipynb
c3-probability-and-statistics/w1/lab-1/: utils.py  (+1 more)
c3-probability-and-statistics/w3/: C3W3_UGL_Central_Limit_Theorem.ipynb
c3-probability-and-statistics/w4/: C3W4_Assignment.ipynb
(+11 files in other folders)
