[tool.poetry]
name = "mathematics-for-machine-learning-and-data-science-specialization"
version = "0.1.0"
description = ""
authors = ["Wisaroot Lertthaweedech <l.wisaroot@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
black = { version = "^24.2.0", extras = ["jupyter"] }
isort = "^5.13.2"
ipykernel = "^6.29.3"
ruff = "*"
mypy = "*"
pre-commit = "*"
nbformat = "^5.9.0"
poetry-plugin-export = "^1.7.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib ="^3.8.4"
sympy = "^1.12"
opencv-python = "^4.9.0.80"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"
jax = "^0.4.26"
jaxlib = "^0.4.26"
ipympl = "^0.9.3"
seaborn = "^0.13.2"
nltk = "^3.8.1"
folium = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 105
target-version = ['py312']
include = '.*\.(py|ipynb)$'  # All .py and .ipynb files

[tool.isort]
line_length = 105

[tool.ruff]
line-length = 105
target-version = 'py312'
extend-include = ["*.ipynb"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
files = '**/*.py'
warn_unused_configs = true
ignore_missing_imports = true
